# Form-Task

./: .gitignore  Dockerfile  README.md  docker-compose.yml  form_templates.json  main.py  pyproject.toml
docker_volumes/mongo/: _mdb_catalog.wt
src/: db_module.py  log_conf.py  services.py
src/schemas/: sch_validators.py
tests/: test_get_form.py  test_schemas.py
